--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">Main</string>
+
+    <string name="app_name">選擇權計算機</string>
+
+    <string name="hello">Hello Aaron!!</string>
+    <string name="Strike">履約價</string>
+    <string name="Vol">波動率</string>
+    <string name="daysOut">到期天數</string>
+
+
 </resources>
